; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/netinet6/extr_icmp6.c_icmp6_init.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/netinet6/extr_icmp6.c_icmp6_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ip6protosw = type { i32 }
%struct.domain = type { i32 }

@icmp6_init.icmp6_initialized = internal global i32 0, align 4
@PR_INITIALIZED = common dso_local global i32 0, align 4
@PR_ATTACHED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @icmp6_init(%struct.ip6protosw* %0, %struct.domain* %1) #0 {
  %3 = alloca %struct.ip6protosw*, align 8
  %4 = alloca %struct.domain*, align 8
  store %struct.ip6protosw* %0, %struct.ip6protosw** %3, align 8
  store %struct.domain* %1, %struct.domain** %4, align 8
  %5 = load %struct.ip6protosw*, %struct.ip6protosw** %3, align 8
  %6 = icmp eq %struct.ip6protosw* %5, null
  br i1 %6, label %17, label %7

7:                                                ; preds = %2
  %8 = load %struct.ip6protosw*, %struct.ip6protosw** %3, align 8
  %9 = getelementptr inbounds %struct.ip6protosw, %struct.ip6protosw* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @PR_INITIALIZED, align 4
  %12 = load i32, i32* @PR_ATTACHED, align 4
  %13 = or i32 %11, %12
  %14 = and i32 %10, %13
  %15 = load i32, i32* @PR_ATTACHED, align 4
  %16 = icmp eq i32 %14, %15
  br label %17

17:                                               ; preds = %7, %2
  %18 = phi i1 [ true, %2 ], [ %16, %7 ]
  %19 = zext i1 %18 to i32
  %20 = call i32 @VERIFY(i32 %19)
  %21 = load i32, i32* @icmp6_init.icmp6_initialized, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %25, label %23

23:                                               ; preds = %17
  store i32 1, i32* @icmp6_init.icmp6_initialized, align 4
  %24 = call i32 (...) @mld_init()
  br label %25

25:                                               ; preds = %23, %17
  ret void
}

declare dso_local i32 @VERIFY(i32) #1

declare dso_local i32 @mld_init(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
